fix: resolved lightbox being slightly off centre

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -151,6 +151,7 @@
 
 .masonry-grid {
   display: flex;
+  margin-left: -16px;
   width: auto;
 }
 
